--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -26,7 +26,9 @@
     <header>
         <nav class="container" style="display: flex; align-items: center; justify-content: space-between;">
             <div style="display: flex; align-items: center;">
-                <a href="{{ .Site.BaseURL }}" class="logo">wittle guys!!</a>
+                <a href="{{ .Site.BaseURL }}" class="logo">
+                  <span class="logo-w">w</span><span class="logo-i">i</span><span class="logo-t1">t</span><span class="logo-t2">t</span><span class="logo-l">l</span><span class="logo-e">e</span> <span class="logo-g">g</span><span class="logo-u">u</span><span class="logo-y">y</span><span class="logo-s">s</span>!!
+                </a>
             </div>
             <ul class="nav-links">
                 {{ range .Site.Menus.main }}
