--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -27,7 +27,7 @@
         <nav class="container" style="display: flex; align-items: center; justify-content: space-between;">
             <div style="display: flex; align-items: center;">
                 <a href="{{ .Site.BaseURL }}" class="logo">
-                  <span class="logo-w">w</span><span class="logo-i">i</span><span class="logo-t1">t</span><span class="logo-t2">t</span><span class="logo-l">l</span><span class="logo-e">e</span> <span class="logo-g">g</span><span class="logo-u">u</span><span class="logo-y">y</span><span class="logo-s">s</span>!!
+                  <span class="logo-w">w</span><span class="logo-i">i</span><span class="logo-t1">t</span><span class="logo-t2">t</span><span class="logo-l">l</span><span class="logo-e">e</span> <span class="logo-g">g</span><span class="logo-u">u</span><span class="logo-y">y</span><span class="logo-s">s</span><span class="logo-ex1"><span class="logo-ex1-bar">!</span><span class="logo-ex1-dot">.</span></span><span class="logo-ex2"><span class="logo-ex2-bar">!</span><span class="logo-ex2-dot">.</span></span>
                 </a>
             </div>
             <ul class="nav-links">
