--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -714,7 +714,7 @@ footer {
 }
 
 .cart-summary .tax {
-    color: #e53935 !important;
+    color: #b3ffd9 !important;
     font-weight: 600 !important;
     font-size: 1rem !important;
     line-height: 1.5 !important;
@@ -729,7 +729,7 @@ footer {
 /* More specific rule for tax element */
 #cart-drawer .cart-drawer-footer .cart-summary .tax,
 .cart-drawer .cart-drawer-footer .cart-summary .tax {
-    color: #e53935 !important;
+    color: #b3ffd9 !important;
     font-weight: 600 !important;
     font-size: 1rem !important;
     line-height: 1.5 !important;
